samples-v0/istio-app-v1/pa2.yml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: changetlsmode
  namespace: default
spec:   
  mtls:
    mode: STRICT
