samples-v0/istio-app-v1/deployment-tomcat-d.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: d-tomcat-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dtomcat
  template:
    metadata:
      labels:
        app: dtomcat
    spec:
      containers:
        - name: dtomcat-container
          image: gcr.io/kodekloud/centos-ssh-enabled:tomcat
          ports:
            - containerPort: 8080
