samples-v0/istio-app-v1/deployment-tt.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ttdeployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tt
  template:
    metadata:
      labels:
        app: tt
    spec:
      containers:
      - image: richardjkendall/curl-bash
        imagePullPolicy: IfNotPresent
        name: tt
