samples-v0/istio-app-v1/service-nginx-s.yml
apiVersion: v1
kind: Service
metadata:
  name: s-nginx-service
spec:
  selector:
    app: snginx
  ports:
    - port: 7000
      protocol: TCP
      targetPort: 80
