samples-v0/istio-app-v1/service-tomcat-d.yml
apiVersion: v1
kind: Service
metadata:
  name: d-tomcat-service
spec:
  selector:
    app: dtomcat
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
