samples-v0/istio-app-v1/service.yml
apiVersion: v1
kind: Service
metadata:
  name: httpbins
  labels:
    app: httpbin
    service: httpbins
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8080
  selector:
    app: httpbin
