samples-v0/istio-app-v1/gateway2.yml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: common-gateway-443
  namespace: istio-ingress
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: http
      protocol: HTTPS
    hosts:
    - "*"
