samples-v0/istio-app-v1/destination-rule-tomcat.yml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: tomcat-istio-mtls
spec:
  host: d-tomcat-service.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
