samples-v0/istio-app-v1/vs-tomcat-d-2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dvstomcat2
spec:
  gateways:
  - mesh
  hosts:
  - d-tomcat-service.default.svc.cluster.local
  http:
  - fault:
      abort:
        httpStatus: 500
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: dtomcat
        port:
          number: 8080
