samples-v0/istio-app-v1/vs-tomcat-d.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dvstomcat
spec:
  gateways:
  - mesh
  hosts:
  - d-tomcat-service.default.svc.cluster.local
  http:
  - name: match-from-service
    match:
    - sourceLabels:
        service: s-nginx-service.default.svc.cluster.local
    route:
    - destination:
        port:
          number: 8080
        host: dtomcat
