samples-v0/istio-app-v1/vs2.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: httpbinvs
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingress/common-gateway-443
  http:
  - match:
    - uri:
        prefix: /headers
    route:
    - destination:
        port:
          number: 8000
        host: httpbins
